--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/preact": "^4.0.8",
     "@astrojs/rss": "^4.0.11",
     "astro": "^5.5.5",
+    "preact": "^10.26.4",
     "sass": "^1.86.0"
   },
   "devDependencies": {
