--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/preact": "^4.0.8",
     "@astrojs/rss": "^4.0.11",
     "astro": "^5.5.5",
+    "astro-icon": "^1.1.5",
     "preact": "^10.26.4",
     "sass": "^1.86.0"
   },
