--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/partytown": "^2.1.4",
     "@astrojs/preact": "^4.0.8",
     "@astrojs/rss": "^4.0.11",
     "astro": "^5.5.5",
