--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sass": "^1.86.0"
   },
   "devDependencies": {
-    "prettier-plugin-astro": "^0.14.1"
+    "prettier": "3.5.3",
+    "prettier-plugin-astro": "0.14.1"
   }
 }
